--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -1219,3 +1219,11 @@ w
           138
         }
 }
+
+@article{Lee2015IdentifyingAA,
+  title={Identifying and Assessing Interesting Subgroups in a Heterogeneous Population},
+  author={Woojoo Lee and Andrey Alexeyenko and Maria Pernemalm and Justine Gu{\'e}gan and Philippe Dessen and Vladimir Lazar and Janne Lehti{\"o} and Yudi Pawitan},
+  journal={BioMed Research International},
+  year={2015},
+  volume={2015}
+}
