--- a/Slide/pre.tex
+++ b/Slide/pre.tex
@@ -44,7 +44,7 @@
 \section{Model}
 
 \begin{frame}
-	\frametitle{The model}
+	\frametitle{Our model}
 \begin{itemize}
 	\item 	In this project, we consider the following model:
 	\begin{eqnarray*}
@@ -116,7 +116,7 @@ A nature extension to $p>n$
 		\item It remains to analysis the subgroups in $\tY = (\widetilde{Y_1},\ldots,\widetilde{Y_n})^T$.
 		\item e.g., k-means, k-median, k-modes, even the deep learing algorithm.
 		\item It is NP-hard in a general Euclidean space, even when the number of clusters k is 2  (Aloise et al., 2009).
-		\item optimal one-dimensional clustering: $O(qknp)$ v.s. $(kn lg n)$ 
+		\item optimal one-dimensional clustering: $O(qknp)$ v.s. $O(kn lg n)$ 
 	\end{itemize}
 \end{frame}
 
@@ -144,7 +144,7 @@ A nature extension to $p>n$
 \end{frame}
 
 \begin{frame}
-	\frametitle{Results}
+	\frametitle{Results (Cont.)}
 		\begin{columns}[t]
 			\column{.5\textwidth}
 			\centering
@@ -161,6 +161,12 @@ A nature extension to $p>n$
 	\frametitle{Results}
 		\includegraphics[width = \textwidth]{fig/ChenBic.png}\\
 
+\end{frame}
+
+\begin{frame}
+	\Large
+	\centering
+	Thank you!
 \end{frame}
 
 \end{document}
