add R Shiniy; modify README

--- a/README.Rmd
+++ b/README.Rmd
@@ -49,3 +49,7 @@ All data preprocessing and simulations are reproduced. The workflow information 
 1. Conduct data processing/preparation for the analyses.
 1. Fit the two-stage subgroup analysis to the preprocessed data.
 1. Generate all plots in the report.
+
+## R Shiny
+
+We deploy our simulations with R Shiny in https://chency1997.shinyapps.io/shiny/.
